cds+ij - rework CDS archive generator to wait for the idle time to generate CDS, review fixes
We wait for the moment, when the IDE is not running in the powersafe mode, computer is not on battery,
and IDEA process is not eating too much CPU to start AppCDS archive creation,
terminate the generation if the precondition changes along the way and retry later again

GitOrigin-RevId: 4b3921b6bdddd24c756147a1dc752bc153f11cba